# django

./: .gitignore  .replit  README.md  pyproject.toml  requirements.txt  start-dev.sh
apps/api/: test_views.py  urls.py  views.py
apps/tenants/: admin.py  models.py
apps/tenants/management/commands/: create_sample_tenant.py
attached_assets/: Pasted-Please-provide-a-detailed-explanation-of-the-architecture-for-a-multi-tenant-SaaS-customer-service-a-1756144021270_1756144021270.txt  Pasted-Prompt-for-AI-to-Explain-Multi-Tenant-SaaS-Customer-Service-Application-Architecture-Please-provide--1756143985453_1756143985453.txt  Pasted-Prompt-for-AI-to-Explain-Multi-Tenant-SaaS-Customer-Service-Application-Architecture-with-External-A-1756144674844_1756144674846.txt
backend/: API_DOCUMENTATION.md  requirements.txt
backend/apps/api/: apps.py  views.py
backend/apps/tenants/: admin.py  apps.py  middleware.py
backend/apps/tenants/migrations/: 0001_initial.py
backend/django_project/: settings.py  urls.py
django_project/: settings.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx
templates/: test_chat.html
